# sql-zen

./: .eslintrc.cjs  .prettierrc.json  LICENSE  README.md  bump.config.ts  components.json  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  typed-router.d.ts  vite.config.ts  vitest.config.ts
.github/workflows/: publish.yml
public/: site.webmanifest  stations.csv  train_services.parquet
src/: App.vue  main.ts  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  error.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs  types.rs
src/assets/: click-the-button.afdesign  main.css  sql-zen-logo.afdesign  thumbnail.afdesign
src/components/: AppHeader.vue  ConsoleResultPanel.vue  ConsoleToolbar.vue  DatabaseExplorerPanel.vue  DatabaseSelect.vue  Editor.vue  Tabs.vue
src/composables/: useActualColorMode.ts  useDataSourceDescriptor.ts  useDataSourceDisplayName.ts  useDataSourceStatus.ts  useDataSources.ts  useDatabaseSystem.ts  useDialog.ts  useDuckdb.ts  useEnv.ts  useExec.ts  useExternalStore.ts  useFlushableRef.ts  useHighlighter.ts  useInit.ts  useIsRunning.ts  useLoggerEvents.ts  useManualReadonlyRef.ts  useOktokit.ts  usePostgresql.ts  useQuery.ts  useQueryHasResult.ts  useQueryResult.ts  useQueryState.ts  useQueryTotalRows.ts  useRegisteredDatabases.ts  useRegistry.ts  useRunnerQueries.ts  useSqlite.ts  useState.ts  useTabManager.ts
src/layouts/: AppLayout.vue  EditorLayout.vue
src/lib/: arrowToResultArray.ts  asArray.ts  copyToClipboard.ts  database.ts  databaseEngines.ts  databaseSystems.ts  downloadBlob.ts  downloadFile.ts  errors.ts  getId.ts  hash.ts  highlighter.ts  id.ts  monacoWorker.ts  runPromised.ts  separateQueries.ts  statements.ts  (+1 more)
(+343 files in other folders)
