[package]
name = "sql-zen"
version = "0.0.0"
description = "SqlZen"
authors = ["My_Maker"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = "0.19.9"
tokio-postgres = "0.7.12"
tokio = "1.39.2"
thiserror = "1.0.63"
async-trait = "0.1.83"
