[package]
name = "sql-zen"
version = "0.1.2"
description = "SqlZen"
authors = ["My_Maker"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7.12"
tokio = "1.39.2"
thiserror = "1.0.63"
async-trait = "0.1.83"
mysql_async = "0.34.2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32.1", features = ["bundled", "column_decltype"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
